# mks-bulletml-toolkit

./: .gitignore  LICENSE  README.md
bulletml_files/: Dev Sub ActionRefs_bml.xml  New Project 1_bml.xml  Shot Down Test_bml.xml  Test ActionRef Sub Calls_bml.xml  aimed_bml.xml  aimed_single_bml.xml  aimed_vert_bml.xml  basic_bml.xml  basic_params.json  basic_params_bml.xml  check_bml.xml  fountain_bml.xml  inter_bml.xml  my quick project_bml.xml  retry project_bml.xml  test direction sequence_bml.xml  test4_bml.xml  test_action_content_accel_bml.xml  test_action_content_changedirection_bml.xml  test_action_content_changespeed_bml.xml  test_action_passing_params_to_fire_bml.xml  test_action_passing_params_to_fire_repeat_bml.xml  test_all_action_content_bml.xml  test_right_angle_bml.xml
data/images/: 8x8_default_bullet.xcf  button_pause.xcf  button_play.xcf  button_play_frame.xcf  button_stop.xcf  player_cursor.xcf
mks-bulletml-interpreter/: CMakeLists.txt  Vector2D.c  Vector2D.h  accel.c  accel.h  action-ref.c  action-ref.h  action.c  action.h  action_info_block.c  action_info_block.h  bml-number.c  bml-number.h  bml-string.c  bml-string.h  bullet-ref.c  bullet-ref.h  bullet.c  bullet.h  bulletml-base.c  bulletml-base.h  bulletml.c  bulletml.h  bulletml_base.c  bulletml_base.h  change-direction.c  change-direction.h  change-speed.c  change-speed.h  change_direction.c  change_direction.h  change_speed.c  change_speed.h  direction.c  direction.h  fire-ref.c  fire-ref.h  fire.c  fire.h  horizontal.c  (+34 more)
mks-bulletml-player/: CMakeLists.txt  app.c  app.h  defines.h  main.c  mks-bulletml-player.files  mksbmlp-defines.h  user-interface.c  user-interface.h  user_interface.c  user_interface.h  utility.c  utility.h
